log/build_2025-09-18_19-29-55/autopilot/stderr.log
  File "/home/antoni/gazebo_maritime_ws/install/lib/python3.12/site-packages/autopilot/azimuth.py", line 69
    def publish_thrust(self)
                            ^
SyntaxError: expected ':'

